Option to allow a registry to configure the client Maven resolver to resolve its platform extension catalogs